platform/orchestration/kubernetes/base/datastores.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db
  namespace: yeahmusic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: auth-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  namespace: yeahmusic
spec:
  selector:
    app: auth-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-db
  namespace: yeahmusic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-db
  template:
    metadata:
      labels:
        app: music-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: music-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: music-db
  namespace: yeahmusic
spec:
  selector:
    app: music-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
